--- a/gb/15/7/17/n4482910.md
+++ b/gb/15/7/17/n4482910.md
@@ -78,8 +78,8 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/10/n2962557.md#1" target="_blank">鲜为人知的马克思之二：自大的马克思</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/11/26/n3738443.md#1" target="_blank">云帆：一水之隔　云泥之别</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/16/n10979189.md#1" target="_blank">共产暴政录：许世友文革中的暴行</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
