--- a/gb/17/11/30/n9912488.md
+++ b/gb/17/11/30/n9912488.md
@@ -150,8 +150,8 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/11/28/n9901176.md#1">《九评》编辑部：共产主义的终极目的 (7)</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/6/n10195670.md#1" target="_blank">陈峰：造毛泽东像那些稀罕事儿</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869318.md#1" target="_blank">这些前中共军官对李洪志大师的感恩</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/8/n10624963.md#1" target="_blank">捡纸鸣冤、“反毛”凉鞋与“毛语录仗”</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284211.md#1" target="_blank">中国良心教师们的故事（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
