--- a/gb/17/12/2/n9916363.md
+++ b/gb/17/12/2/n9916363.md
@@ -116,7 +116,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/23/n10802534.md#1" target="_blank">韩丽明：游街</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/19/n11462628.md#1" target="_blank">可心：香港警察有选择“枪口抬高一寸”的权利</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242880.md#1" target="_blank">美加政要褒奖法轮大法 宣布大法日大法月</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
