--- a/gb/18/5/25/n10426013.md
+++ b/gb/18/5/25/n10426013.md
@@ -2,7 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>魔鬼在统治着我们的世界(7)：渗透西方(上)</h2>
-<a href="https://git.io/JvPuf"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://git.io/JeGhp"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
 <p>【大纪元2018年05月25日讯】<strong>第五章 <ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%B8%97%E9%80%8F.md#1">渗透</a>西方（上）</strong></p>
@@ -104,7 +104,7 @@
 <p><ahref="#_ednref16" name="_edn16">[16]</a> 王曾才：《世界现代史》（台北：三民书局，1994），页324-329。</p>
 <p><ahref="#_ednref17" name="_edn17">[17]</a> Dinesh D&#8217;Souza, <em>The Big Lie: Exposing the Nazi Roots of the American Left</em> (Chicago: Regnery Publishing 2017), Chapter 7.</p>
 <p><ahref="#_ednref18" name="_edn18">[18]</a> Jim Powell, <em>FDR’s Follies: How Roosevelt and His New Deal Prolonged the Great Depression</em> (New York: Crown Forum, 2003), back cover.</p>
-<p><ahref="#_ednref19" name="_edn19">[19]</a> G. Edward Griffin, <em>More Deadly than War</em>, <ahref=""></a><a href="https://git.io/JvPuf"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=gOa1foc5IXI">"></a><a href="https://git.io/JvPuf"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=gOa1foc5IXI</a>.</p>
+<p><ahref="#_ednref19" name="_edn19">[19]</a> G. Edward Griffin, <em>More Deadly than War</em>, <ahref=""></a><a href="https://git.io/JeGhp"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=gOa1foc5IXI">"></a><a href="https://git.io/JeGhp"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=gOa1foc5IXI</a>.</p>
 <p><ahref="#_ednref20" name="_edn20">[20]</a> <ahref="http://www.aei.org/scholar/nicholas-eberstadt/">Nicholas Eberstadt</a>, “The Great Society at 50” (American Enterprise Institute),<ahref="http://www.aei.org/publication/the-great-society-at-50/"> http://www.aei.org/publication/the-great-society-at-50/</a>. 探讨美国高福利政策的后果，还可以参考同一作者的<em>A Nation of Takers: America’s Entitlement Epidemic</em> (Templeton Press, 2012).</p>
 <p><ahref="#_ednref21" name="_edn21">[21]</a> 关于这一段话的作者有不同说法，一说作者是法国思想家托克维尔。我们引用这句话是因其意思可取。</p>
 <p><ahref="#_ednref22" name="_edn22">[22]</a> William L. Lind, Chapter VI “Further Readings on the Frankfurt School,” in William L. Lind, ed., <em>Political Correctness: A Short History of an Ideology</em> (Free Congress Foundation, 2004), 5-6.</p>
@@ -119,7 +119,7 @@
 <p><ahref="#_ednref31" name="_edn31">[31]</a> G. Edward Griffin, <em>Anarchy U.S. A.: In the Name of Civil Rights</em> (DVD). John Birch Society.</p>
 <p><ahref="#_ednref32" name="_edn32">[32]</a> John Pepper (Joseph Pogani), <em>American Negro Problems</em> (New York: Workers Library Publishers, 1928), <ahref="https://www.marxistsfr.org/history/usa/parties/cpusa/1928/nomonth/0000-pepper-negroproblems.pdf">https://www.marxistsfr.org/history/usa/parties/cpusa/1928/nomonth/0000-pepper-negroproblems.pdf</a>.</p>
 <p><ahref="#_ednref33" name="_edn33">[33]</a> James W. Ford and James Allen, <em>The Negroes in a Soviet America</em> (New York: Workers Library Publishers, 1934), 24-30.</p>
-<p><ahref="#_ednref34" name="_edn34">[34]</a> Leonard Patterson, “I Trained in Moscow For Black Revolution,” <ahref=""></a><a href="https://git.io/JvPuf"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=GuXQjk4zhZs">"></a><a href="https://git.io/JvPuf"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=GuXQjk4zhZs</a>.</p>
+<p><ahref="#_ednref34" name="_edn34">[34]</a> Leonard Patterson, “I Trained in Moscow For Black Revolution,” <ahref=""></a><a href="https://git.io/JeGhp"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=GuXQjk4zhZs">"></a><a href="https://git.io/JeGhp"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=GuXQjk4zhZs</a>.</p>
 <p><ahref="#_ednref35" name="_edn35">[35]</a>?于展：〈美国民权运动中的中国因素〉，爱思想网，<ahref="http://www.aisixiang.com/data/95027.md#1">http://www.aisixiang.com/data/95027.md#1</a>.</p>
 <p><ahref="#_ednref36" name="_edn36">[36]</a> Thurston Powers, “How Black Lives Matter Is Bringing Back Traditional Marxism,” <em>The Federalist</em>, http://thefederalist.com/2016/09/28/black-lives-matter-bringing-back-traditional-marxism/.</p>
 
@@ -137,8 +137,8 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437477.md#1" target="_blank">世纪正邪之战 美国总统及各级政要支持法轮功</a></li><hr>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/5/23/n10421536.md#1">魔鬼在统治着我们的世界(6)：输出革命</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/17/n10063990.md#1" target="_blank">苏智敏：血腥计生悲歌——帮凶  弃卒  泪水</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726202.md#1" target="_blank">心灵升华 屏东法轮功学员见证大法美好</a></li><hr>
 
 
 <strong>热门新闻：</strong>
