--- a/gb/18/5/30/n10440961.md
+++ b/gb/18/5/30/n10440961.md
@@ -2,7 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>魔鬼在统治着我们的世界(11)：家庭篇(下)</h2>
-<a href="https://git.io/JvPEh"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://git.io/JeGjv"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
 <p>【大纪元2018年05月30日讯】<strong>第七章 <ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%AE%B6%E5%BA%AD.md#1">家庭</a>篇：魔鬼在毁掉我们的家庭（下）</strong></p>
@@ -103,7 +103,7 @@
 <p>共产邪灵引诱人类相信罪恶不在人的堕落，而在社会；让人从反叛传统中寻找出路，离神更远。邪灵鼓吹的女权、同性恋、性解放等等，用的是“自由”、“解放”等美丽辞藻，最终导致的结果是女性的尊严被贬损，男性的责任被丢弃，家庭的神圣被践踏，两性的道德被变异，孩子的未来被摧毁，最后狞笑的却是魔鬼。#</p>
 <p>（点阅《九评》编辑部新书<ahref="https://github.com/tjvrql262/djy/blob/master/gb/nf1267582.md#1" target="_blank" rel="noopener noreferrer">《魔鬼在统治着我们的世界》</a>）</p>
 <p>*****</p>
-<p><ahref="#_ednref1" name="_edn1"><sup>[1]</sup></a> “Jordan Peterson Debate on the Gender Pay Gap, Campus Protests and Postmodernism,” Channel 4 News, January 16, 2018, "></a><a href="https://git.io/JvPEh"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=aMcjxSThD54&amp;t=781s.</p>
+<p><ahref="#_ednref1" name="_edn1"><sup>[1]</sup></a> “Jordan Peterson Debate on the Gender Pay Gap, Campus Protests and Postmodernism,” Channel 4 News, January 16, 2018, "></a><a href="https://git.io/JeGjv"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/watch?v=aMcjxSThD54&amp;t=781s.</p>
 <p><ahref="#_ednref2" name="_edn2"><sup>[2]</sup></a>?C. P. Benbow and J. C. Stanley, “Sex Differences in Mathematical Ability: Fact or Artifact?” Science, 210 (1980):1262–1264.</p>
 <p><ahref="#_ednref3" name="_edn3"><sup>[3]</sup></a> Benbow, C., “Sex Differences in Ability in Intellectually Talented Preadolescents: Their Nature, Effects, and Possible Causes,” <em>Behavioral and Brain Sciences</em> 11(2) (1988): 169-183.</p>
 <p><ahref="#_ednref4" name="_edn4"><sup>[4]</sup></a> Camilla Persson Benbow et. al., &#8220;Sex Differences in Mathematical Reasoning Ability at Age 13: Their Status 20 Years Later,&#8221; <em>Psychological Science</em> 11(6) (2000): 474-480.</p>
@@ -154,7 +154,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9970786.md#1" target="_blank">明白人：“平型关大捷”的真相</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li><hr>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/1/n11293517.md#1" target="_blank">【征文】林辉：外国名人如此仰慕中华文化</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/8/n11032583.md#1" target="_blank">拥有幸福健康 澳洲民众感恩法轮功师父</a></li><hr>
 
 
 <strong>热门新闻：</strong>
