--- a/gb/6/11/14/n1520631.md
+++ b/gb/6/11/14/n1520631.md
@@ -185,7 +185,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/8/n10202468.md#1" target="_blank">林辉：“爱有阶级性”后的人伦惨剧</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/11/7/n3077476.md#1" target="_blank">【史实】卡尔·马克思的成魔之路</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
